Adding some testing to the Controller